deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lydteam-sandbox-deployment
  labels:
    app:               lydteam-sandbox-nginx
  annotations:
    nrk/criticality:        4
    nrk/environment:        test
    nrk/dependencies:       nginx
    nrk/email-contact:      kenneth.rorvik@nrk.no
    nrk/slack-contact:      "#lydteamet-sandbox"
    nrk/slack-notification: "#lydteamet-sandbox"
    nrk/documentation:      https://github.com/nrkno/lydteam-kubernetes-sandbox
    nrk/repository:         https://github.com/nrkno/lydteam-kubernetes-sandbox
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lydteam-sandbox-nginx
  template:
    metadata:
      labels:
        app: lydteam-sandbox-nginx
    spec:
      containers:
      - name: lydteam-sandbox-nginx
        image: nginx:latest
        ports:
        - containerPort: 80
      restartPolicy: Always
