service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lydteam-sandbox-service
spec:
  selector:
    app: lydteam-sandbox-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
