ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: lydteam-sandbox
spec:
  rules:
    - host: lydteam-sandbox.kubeint.nrk.no
      http:
        paths:
          - backend:
              serviceName: lydteam-sandbox-service
              servicePort: 80
            path: /
  tls:
    - hosts:
      - lydteam-sandbox.kubeint.nrk.no
